# Eyetrack2LLM

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLIC_FILES.txt  README.md  SECURITY.md  pyproject.toml
arxiv/: Makefile  README.md  main.bbl  main.tex  references.bib
data/: .gitignore
docs/: cross_corpus_invariance.md  data.md  environment.md  limitations.md  manuscript_assets.md  methods.md  reproducibility.md  residual_exposure_diagnostics.md  target_selection_decomposition.md  text_influence.md  zuco.md
manuscript/: artifact_manifest.csv  artifact_provenance.json  figure_captions.md  manuscript.md
scripts/: analyze_cross_corpus_invariance.py  analyze_half_specific_baseline_audit.py  analyze_provo.py  analyze_provo_independent_reliability.py  analyze_provo_reconciled_sensitivity.py  analyze_provo_specification_curve.py  analyze_provo_text_inference.py  analyze_residual_exposure_diagnostics.py  analyze_target_selection_decomposition.py  analyze_text_influence.py  analyze_zuco_edge_threshold_sensitivity.py  audit_line_partition_identity.py  audit_provo_word_reconciliation.py  audit_zuco_criterion_uncertainty.py  build_arxiv_bundle.py  build_compact_artifact_bundle.py  check_release.py  convert_provo.py  convert_zuco.py  generate_manuscript_assets.py  migrate_descriptive_control_artifacts.py  rebuild_release_assets.py  run_auxiliary_experiment.py  run_residual_recovery_simulation.py  run_zuco_transfer.py  stage_public.py  summarize_provo_budget.py  verify_results.py
tests/: test_arxiv_bundle.py  test_auxiliary.py  test_baseline.py  (+15 more)
(+41 files in other folders)
