[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eyetrack2llm"
version = "0.3.0"
description = "Fixed-sample pattern correlation, model-target alignment, and transport audits for gaze-transition residual supervision"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
test = ["pytest>=8", "torch>=2.1", "wordfreq==3.1.1"]
analysis = ["wordfreq==3.1.1", "spacy==3.8.14", "thinc>=8.3.12,<8.4", "confection>=1.3.2,<2", "transformers>=5.13,<5.14", "torch>=2.13"]
figures = ["matplotlib>=3.8,<3.11"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
